faq span style fix on mobile

--- a/sass/components/_faq.scss
+++ b/sass/components/_faq.scss
@@ -34,6 +34,9 @@
     align-items: center;
     cursor: pointer;
     padding: 10px 0;
+    span{
+      color:black;
+    }
   }
   
   &__icon {
